# mcp_sandbox

./: .env.example  README.md  pyproject.toml  requirements.txt
agents/: langgraph_agent.py
agents/crewai/: crewai_agent.py
agents/crewai/config/: agents.yaml  tasks.yaml
mcp_servers/: docs_server.py  weather_server.py
