[project]
name = "mcp-sandbox"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.105.0",
    "crewai-tools[mcp]>=0.40.1",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.6",
]
